--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "1.0.18",
+    "@vercel/functions": "1.5.2",
     "ai": "4.0.34",
     "embla-carousel-react": "8.5.2",
     "next": "15.1.4",
