--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/functions": "1.5.2",
     "ai": "4.0.34",
     "embla-carousel-react": "8.5.2",
+    "embla-carousel-wheel-gestures": "8.0.1",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
