--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "1.0.18",
+    "@ai-sdk/openai": "2.0.86",
+    "@ai-sdk/react": "2.0.115",
     "@neodrag/react": "2.3.0",
     "@vercel/functions": "1.5.2",
-    "ai": "4.0.34",
+    "ai": "5.0.113",
     "embla-carousel-react": "8.5.2",
     "embla-carousel-wheel-gestures": "8.0.1",
     "install": "0.13.0",
-    "next": "15.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "zod": "3.24.1"
+    "next": "15.5.9",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "zod": "4.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -27,7 +28,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.4",
+    "eslint-config-next": "15.1.11",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
